# Ai-Media-Os

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: auto-create-pr.yml  autonomous-pr-agent.yml
.pytest-tmp-alignment-compound/test_alignment_clamps_final_wo0/: alignment.db
.pytest-tmp-alignment-compound/test_alignment_requires_approv0/: alignment.db
.pytest-tmp-alignment-compound/test_asset_planning_is_idempot0/: assets.db
.pytest-tmp-alignment-compound/test_asset_queue_handlers_exec0/: assets.db
.pytest-tmp-alignment-compound/test_asset_review_status_chang0/: assets.db
.pytest-tmp-alignment-compound/test_cache_corruption_is_rejec0/: assets.db
.pytest-tmp-alignment-compound/test_changed_generation_settin0/: assets.db
.pytest-tmp-alignment-compound/test_changes_requested_asset_i0/: assets.db
.pytest-tmp-alignment-compound/test_chatterbox_queue_job_requ0/: assets.db
.pytest-tmp-alignment-compound/test_comfyui_asset_provenance_0/: assets.db
.pytest-tmp-alignment-compound/test_documented_fake_asset_cli0/: assets.db
alembic/: env.py  script.py.mako
config/: pr-review-rules.json
docs/: MASTER_PLAN.md  MVP_SCOPE.md  autonomous-pr-agent-setup.md
scripts/: import-reference-sfx-compilation.ps1  keep-awake-on-ac-and-internet.ps1  regenerate-short-production.ps1  render-layered-animation-demo.py  review-latest-approval.ps1  review_pull_request.py  run-local.ps1  run-short-production.ps1  start-layered-short-project.ps1  start-new-short-project.ps1
(+995 files in other folders)
