[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-media-os"
version = "0.1.0"
description = "Local-first AI-assisted media production foundation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "structlog>=24.4",
    "uvicorn>=0.30",
]

[project.scripts]
ai-media-os = "ai_media_os.cli:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
workflow-langgraph = [
    "langgraph>=0.2,<0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_media_os"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "S", "C4", "DTZ", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["ANN", "N806"]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["ai_media_os"]
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true
